--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -4,35 +4,45 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body >
     <header>
-        <h2>
+        <h1>
             BlackChat
-        </h2>
+        </h1>
     </header>
     <div class="leftBlock">
-        <img  width="80" height="80" src="avatar.PNG">
-
+        <img width="80" height="80" src="avatar.PNG">
+        <br><br>
+        <h3>
+            Alex Zapolski
+        </h3>
+        <br><br>
+        <a href="chat.html">Изменить имя</a>
     </div>
     <div class="rightBlock">
         <img src="avatar.PNG" width="80" height="80" >
+        <h3>
+            Friend
+        </h3>
+
     </div>
     <div class="centerBlock">
         <div class="mailHistory">
             <div class="mail">
                 <button > Изменить </button>
                 <button> Удалить </button>
-                <br>
+                <br><br>
                 <textarea  readonly>
                     Сообщение...
                 </textarea>
             </div>
         </div>
-        <div>
+        <div class = "mailInput">
             <form>
                 <textarea>
                     Введите сообщение...
                 </textarea>
+                <br>
                 <button name = "send">Отправить</button>
             </form>
         </div>
