--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -37,13 +37,13 @@
                 </textarea>
             </div>
         </div>
-        <div class = "mailInput">
+        <div class = "mailInput" align="right">
             <form>
                 <textarea>
                     Введите сообщение...
                 </textarea>
                 <br>
-                <button name = "send">Отправить</button>
+                <button name = "send" >Отправить</button>
             </form>
         </div>
     </div>
