--- a/ChatWeb/registration.html
+++ b/ChatWeb/registration.html
@@ -10,11 +10,16 @@
             BlackChat
         </h1>
     </header>
-    <div class = "inLog">
+    <div class="inLog">
         <h2>
-            Welcome!!!
+            Registration
         </h2>
         <form>
+            Name:
+            <br>
+            <input name="Name">
+            <br>
+            <br>
             Login:
             <br>
             <input name="login">
@@ -24,7 +29,9 @@
             <input name="password" content="password">
             <br>
             <br>
-            <button  > Enter </button>
+            Repeat password:<br>
+            <input name="password" content="password">
+            <button  > Sign up </button>
         </form>
     </div>
 </body>
