--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -17,8 +17,9 @@
         <h3>
             Alex Zapolski
         </h3>
-        <br><br>
-        <a href="chat.html">Изменить имя</a>
+        <div align="right">
+            <a href="chat.html">Изменить имя</a>
+        </div>
     </div>
     <div class="rightBlock">
         <img src="avatar.PNG" width="80" height="80" >
@@ -27,22 +28,18 @@
         </h3>
 
     </div>
-    <div class="centerBlock">
+    <div class="centerBlock" >
         <div class="mailHistory">
-            <div class="mail">
-                <button > Изменить </button>
-                <button> Удалить </button>
-                <br><br>
-                <textarea  readonly>
-                    Сообщение...
-                </textarea>
+            <div class="mail"  >
+                Friend
+                <img class="rec" src = "rec.gif"> </img>
+                <img class="del" src = "del.png"> </img>
+                <textarea  readonly>Hello!!</textarea>
             </div>
         </div>
         <div class = "mailInput" align="right">
             <form>
-                <textarea>
-                    Введите сообщение...
-                </textarea>
+                <textarea>Введите сообщение...</textarea>
                 <br>
                 <button name = "send" >Отправить</button>
             </form>
@@ -50,3 +47,4 @@
     </div>
 </body>
 </html>
+<script src="script.js"></script>
