--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -14,11 +14,11 @@
     <div class="leftBlock">
         <img width="80" height="80" src="avatar.PNG">
         <br><br>
-        <h3>
+        <h3 id = "nameUser">
             Alex Zapolski
         </h3>
         <div align="right">
-            <a href="chat.html">Изменить имя</a>
+            <button onmousedown="renameUser()" >Изменить имя</button>
         </div>
     </div>
     <div class="rightBlock">
@@ -26,15 +26,15 @@
         <h3>
             Friend
         </h3>
-
     </div>
     <div class="centerBlock" >
         <div class="mailHistory">
             <div class="mail"  >
                 Friend
-                <img class="rec" src = "rec.gif"> </img>
+                <img class="rec" onclick="renameEmail()" src = "rec.gif"> </img>
                 <img class="del" src = "del.png"> </img>
-                <textarea  readonly>Hello!!</textarea>
+                <br><br>
+                <div class="emailText" >Hello!!</div>
             </div>
         </div>
         <div class = "mailInput" align="right">
@@ -45,6 +45,7 @@
             </form>
         </div>
     </div>
+
 </body>
 </html>
 <script src="script.js"></script>
