--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -4,48 +4,47 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body >
-    <header>
-        <h1>
-            <div class="circle"> </div>
-            BlackChat
-        </h1>
-    </header>
-    <div class="leftBlock">
-        <img width="80" height="80" src="avatar.PNG">
-        <br><br>
-        <h3 id = "nameUser">
-            Alex Zapolski
-        </h3>
-        <div align="right">
-            <button onmousedown="renameUser()" >Изменить имя</button>
-        </div>
-    </div>
-    <div class="rightBlock">
-        <img src="avatar.PNG" width="80" height="80" >
-        <h3>
-            Friend
-        </h3>
-    </div>
-    <div class="centerBlock" >
-        <div class="mailHistory">
-            <div class="mail"  >
-                Friend
-                <img class="rec" onclick="renameEmail()" src = "rec.gif"> </img>
-                <img class="del" src = "del.png"> </img>
-                <br><br>
-                <div class="emailText" >Hello!!</div>
+<body onload="run()">
+    <div class="body">
+        <header>
+            <h1>
+                <div class="circle"> </div>
+                BlackChat
+            </h1>
+        </header>
+        <div class="leftBlock">
+            <img width="80" height="80" src="avatar.PNG">
+            <br><br>
+            <h3 id = "nameUser">
+                Alex Zapolski
+            </h3>
+            <div align="right">
+                <button onmousedown="renameUser()" >Изменить имя</button>
             </div>
         </div>
-        <div class = "mailInput" align="right">
-            <form>
-                <textarea>Введите сообщение...</textarea>
+        <div class="rightBlock">
+            <img src="avatar.PNG" width="80" height="80" >
+            <h3>
+                Friend
+            </h3>
+        </div>
+        <div class="centerBlock" >
+            <div class="mailHistory">
+                <div class="mail">
+                    Friend
+                    <img class="rec"  src = "rec.gif"> </img>
+                    <img class="del" src = "del.png"> </img>
+                    <br><br>
+                    <div class="emailText" >Hello!!</div>
+                </div>
+            </div>
+            <div class = "mailInput" align="right">
+                <textarea name="email" placeholder="Введите сообщение"></textarea>
                 <br>
-                <button name = "send" >Отправить</button>
-            </form>
+                <button name = "send" onclick="sendEmail()">Отправить</button>
+            </div>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
-<script src="script.js"></script>
