--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -37,6 +37,13 @@
                     <br><br>
                     <div class="emailText" >Hello!!</div>
                 </div>
+                <div class="mail">
+                    Friend
+                    <img class="rec"  src = "rec.gif"> </img>
+                    <img class="del" src = "del.png"> </img>
+                    <br><br>
+                    <div class="emailText" >Hello!!</div>
+                </div>
             </div>
             <div class = "mailInput" align="right">
                 <textarea name="email" placeholder="Введите сообщение"></textarea>
