--- a/ChatWeb/chat.html
+++ b/ChatWeb/chat.html
@@ -15,9 +15,7 @@
         <div class="leftBlock">
             <img width="80" height="80" src="avatar.PNG">
             <br><br>
-            <h3 id = "nameUser">
-                Alex Zapolski
-            </h3>
+            <h3 id = "nameUser">Alex Zapolski</h3>
             <div align="right">
                 <button onmousedown="renameUser()" >Изменить имя</button>
             </div>
@@ -30,20 +28,6 @@
         </div>
         <div class="centerBlock" >
             <div class="mailHistory">
-                <div class="mail">
-                    Friend
-                    <img class="rec"  src = "rec.gif"> </img>
-                    <img class="del" src = "del.png"> </img>
-                    <br><br>
-                    <div class="emailText" >Hello!!</div>
-                </div>
-                <div class="mail">
-                    Friend
-                    <img class="rec"  src = "rec.gif"> </img>
-                    <img class="del" src = "del.png"> </img>
-                    <br><br>
-                    <div class="emailText" >Hello!!</div>
-                </div>
             </div>
             <div class = "mailInput" align="right">
                 <textarea name="email" placeholder="Введите сообщение"></textarea>
